# command_SLM_package

./: README.md  pyproject.toml  requirements.txt  setup.py
command_slm/: __init__.py  cli.py  inference.py  model_manager.py  prompt_templates.py  ui.py
